GL/src/test/deca/context/invalid/deca_sans_objet/boolean.deca
// Description :
// test de déclaration de variables
//
// Resultats :
// Ligne 10: z inconnu
//
// Historique:
// cree le 8/01/2026

{
  boolean b;
  b = 1 && 2;
}